--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,9 @@
         <p>This site displays content from Trove. It is a demonstration of how resources collected using <a href="http://help.nla.gov.au/trove/using-trove/creating-contributing/lists">Trove lists</a> can be reused through the <a href="http://help.nla.gov.au/trove/building-with-trove">Trove API</a> to create new interfaces and applications.</p>
       </div>
       <div ng-hide="listHide" class="ng-hide" id="exhibition-credit">
-        <p><small>This demonstration was created by <a href="http://discontents.com.au/about-me">Tim Sherratt</a> (<a href="http://twitter.com/wragge">@wragge</a>) to show how easy it is to create your own exhibition.</small></p>
+        <p><a>The Sell: Australian Advertising 1790s to 1990s</a></p>
+        <p>National Library of Australia, Canberra</p>
+        <p>23rd Novemeber 2016 to 25th April 2017</p>
       </div>
       <ul ng-hide="listHide" class="ng-hide" id="lists">
         <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
@@ -63,7 +65,7 @@
       </ul>
       <script>
         // ADD YOUR TROVE API KEY
-        var troveAPIKey = "";
+        var troveAPIKey = "u288nogqlhpihhbc";
         var config = {};
         config.listSnippet = 50;
         config.directLinks = true;
@@ -80,14 +82,13 @@
       <div class="container text-muted">
         <div class="row">
           <div class="col-md-6">
-            <h5>About this exhibition</h5>
+            <h1>Visit the exhibition</h1>
             <div ng-bind-html="credit"></div>
           </div>
           <div class="col-md-4 col-md-offset-2">
             <img src="images/trove_logo.png" class="pull-right">
-            <h5>Powered by <a href="http://trove.nla.gov.au">Trove</a></h5>
-            <p><small><a href="https://github.com/wragge/trove-lists-exhibition">Create your own exhibitions</a> using Trove lists.</small></p>
-            <p></p>
+            <h3>Powered by <a href="http://trove.nla.gov.au">Trove</a></h3>
+            
           </div>
       </div>
     </footer>
