--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
-          <div class="navbar-header">
+          <div class="row">
+          <div class="navbar-header col-xs-3">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
@@ -32,22 +33,30 @@
             <a class="navbar-brand" href="#/">{{ exhibition }}</a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div class="collapse navbar-collapse col-xs-3" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li ng-class="{ active: isActive('/') }"><a href="#/">Home</a></li>
-              <li ng-class="{ active: isActive('/topics/') }"><a ng-href="#/topics/">Topics</a></li>
+              <li ng-class="{ active: isActive('/featured/') }"><a ng-href="#/featured/">Featured</a></li>
               <li ng-class="{ active: isActive('/resources/') }"><a ng-href="#/resources/">Resources</a></li>
             </ul>
           </div>
+          <div class="nav navbar-nav col-xs-3 pull-right">
+
+            <a href="#" id="grid" class="btn btn-default btn-lg"><span
+                            class="glyphicon glyphicon-th-large"></span></a>
+
+
+          </div>
         </div>
+      </div>
       </div>
     </div>
 
     <div class="container">
 
       <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
-      <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Forecasters</h1>
+      <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Shell</h1>
       <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
       <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
         <p>This site displays content from Trove. It is a demonstration of how resources collected using <a href="http://help.nla.gov.au/trove/using-trove/creating-contributing/lists">Trove lists</a> can be reused through the <a href="http://help.nla.gov.au/trove/building-with-trove">Trove API</a> to create new interfaces and applications.</p>
@@ -59,13 +68,12 @@
       </div>
       <ul ng-hide="listHide" class="ng-hide" id="lists">
         <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=43805">A day in the life of Mr Mares, weatherman</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83777">Clement Wragge</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83774">Inigo Jones</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92589">A day in the life of Mr Mares, weatherman</a></li>
+        
       </ul>
       <script>
         // ADD YOUR TROVE API KEY
-        var troveAPIKey = "u288nogqlhpihhbc";
+        var troveAPIKey = "l2pksu1ctrtkd1bg";
         var config = {};
         config.listSnippet = 50;
         config.directLinks = true;
@@ -88,7 +96,7 @@
           <div class="col-md-4 col-md-offset-2">
             <img src="images/trove_logo.png" class="pull-right">
             <h3>Powered by <a href="http://trove.nla.gov.au">Trove</a></h3>
-            
+
           </div>
       </div>
     </footer>
