--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,22 @@
 <section class="main"></section>
 
 
+<div class="base-nav">
+  <ul>
+    <li class="primary-close"><a href="#">THE SELL</a></li>
 
+    <li id="base-nav-featured"><a href="#">FEATURED</a></li>
+    <li id="base-nav-resources"><a href="#">RESOURCES</a></li>
+    <li>
+      <!-- EMPTY DIV FOR GREY LINE -->
+    </li>
+    <li>
+      <a class="grid-trigger" href="#0">
+        <img src="img/icon-trigger.png" width="100%" height="100%" /></a>
+    </li>
+    <!-- primary exhibition trigger -->
+  </ul>
+</div>
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
