--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
           <li class="primary-close"><a ng-href="#/">THE SELL</a></li>
 
            <li id="base-nav-featured"><a ng-href="#/featured/">FEATURED</a></li>
-          <li id="base-nav-resources"><a href="#">RESOURCES</a></li>
+          <li id="base-nav-resources"><a ng-href="#/resources/">RESOURCES</a></li>
           <li><!-- EMPTY DIV FOR GREY LINE --></li>
           <li><a class="grid-trigger" href="#0">
               <img src="img/icon-trigger.png" width="100%" height="100%"/></a>
@@ -89,16 +89,14 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
-<script src="bower_components/eventie/eventie.js"></script>
-<script src="bower_components/doc-ready/doc-ready.js"></script>
-<script src="bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="bower_components/matches-selector/matches-selector.js"></script>
+<script src="bower_components/ev-emitter/ev-emitter.js"></script>
+<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
 <script src="bower_components/masonry/masonry.js"></script>
+<script src="bower_components/eventEmitter/EventEmitter.js"></script>
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
 <script src="bower_components/angular-masonry-directive/src/angular-masonry-directive.js"></script>
 <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
@@ -122,5 +120,6 @@
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/primary_slider_main.js"></script>
 <script src="js/grid-list-view.js"></script>
+
 </body>
 </html>
