--- a/app/index.old.html
+++ b/app/index.old.html
@@ -173,7 +173,7 @@
             <div class="col-6 col-md-4">
               <div ng-bind-html="highlights"></div>
               <div>
-                <a id="highlights-click" ng-click="clickToOpen()" ><span class="glyphicon glyphicon-arrow-right"></span></a>
+                <a id="highlights-click" ><span class="glyphicon glyphicon-arrow-right"></span></a>
               </div>
             </div>
           </div>
