--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
        <ul>
           <li class="primary-close"><a ng-href="#/">THE SELL</a></li>
 
-           <li id="base-nav-featured"><a ng-href="#/featured/">FEATURED</a></li>
+           <li id="base-nav-featured"><a ng-href="#/topics/">FEATURED</a></li>
           <li id="base-nav-resources"><a ng-href="#/resources/">RESOURCES</a></li>
           <li><!-- EMPTY DIV FOR GREY LINE --></li>
           <li><a class="grid-trigger" href="#0">
