--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <div class="container">
 
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
-    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Shell</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Sell</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
       Step back in time, into the ads of Australia's past. Ephemeral by nature, often lasting in impact, advertising surrounds us. It aims to inform us and influence how we live, what we buy and how we spend our leisure time. It may not reflect our reality, yet it can affect how we remember the past. Through highlights from the Library’s vast collections, this exhibition explores how Australian advertising has used words, images and sound to inform and persuade. It traces how advertising has evolved as society and technology have changed, asking what it reveals about the everyday lives of Australians from the 1790s to the 1990s.
