--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
  	 <meta name="description" content="Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="css/index.css">
@@ -19,6 +19,11 @@
   <div class="container">
 
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
+
+    <h1 ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.png</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.png</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.png</h1>
+
     <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Sell</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
