--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,38 @@
 
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
 
-    <h1 ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.png</h1>
-    <h1 ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.png</h1>
-    <h1 ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.png</h1>
+    <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.png</div>
+    <div ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.png</div>
+    <div ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.png</div>
+
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image1">img/high_1.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption1">Caption 1</div>
+
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image2">img/high_2.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption2"> Caption 2</div>
+
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image3">img/high_3.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption3"> Caption 3</div>
+
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image4">img/high_4.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Caption 4</div>
+
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/high_5.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Caption 5</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image6">img/high_6.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Caption 6</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image7">img/high_7.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Caption 7</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image8">img/high_8.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption8"> Caption 8</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image9">img/high_9.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption9"> Caption 9</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image10">img/high_10.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption10"> Caption 10</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image11">img/high_11.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption11"> Caption 11</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-image12">img/high_12.jpg</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption12"> Caption 12</div>
 
     <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">The Sell</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
