--- a/app/index.html
+++ b/app/index.html
@@ -68,12 +68,12 @@
     </div>
     <ul ng-hide="listHide" class="ng-hide" id="lists">
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-      <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92589">Minties</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92672">Vegemite</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92583">Jantzen</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92603">Bile Beans</a></li>
-          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=92585">Stamina trousers</a></li>
-
+      <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102074">Melodrama in Meiji Japan: Historical Stories</a></li>
+          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102076">Melodrama in Meiji Japan: Contemporary Life</a></li>
+          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102083">Melodrama in Meiji Japan: Seasons/Festivals</a></li>
+          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102086">Melodrama in Meiji Japan: Beautiful Women</a></li>
+          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102089">Melodrama in Meiji Japan: Dramatic Stories</a></li>
+          <li><a class="list-link" href="http://trove.nla.gov.au/list?id=102090">Melodrama in Meiji Japan: Love & Romance</a></li>
     </ul>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-model-description">
       <p>Step back in time, into the ads of Australia's past. This exhibition showcases our rich collections of Australian advertising and explores the messages behind many iconic and long forgotten ads.</p>
@@ -126,12 +126,13 @@
 <script src="bower_components/angular-fontawesome/dist/angular-fontawesome.js"></script>
 <script src="bower_components/angular-truncate/src/truncate.js"></script>
 <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/get-size/get-size.js"></script>
 <script src="bower_components/eventie/eventie.js"></script>
 <script src="bower_components/doc-ready/doc-ready.js"></script>
 <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+<script src="bower_components/get-style-property/get-style-property.js"></script>
 <script src="bower_components/matches-selector/matches-selector.js"></script>
+<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="bower_components/outlayer/item.js"></script>
 <script src="bower_components/outlayer/outlayer.js"></script>
